# ocr-mal

./: README.md  infer.py  pyproject.toml  train.py
data/: mal_dataloader.py
models/: ocr_model.py  swin_backbone.py  transformer_head.py
utils/: metrics.py
